unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__BankRoutingCode__c.field-meta.xml
<CustomField>
    <fullName>blng__BankRoutingCode__c</fullName>
    <description>The valid Routing number of the customer’s Bank</description>
    <inlineHelpText>Le numéro de routage valide de la banque, qui est aussi appelé le code ABA</inlineHelpText>
    <label>Bank Routing Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>