unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingCompany__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingCompany__c</fullName>
    <inlineHelpText>Société de l’adresse de facturation de la carte</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>