unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingEmail__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingEmail__c</fullName>
    <inlineHelpText>E-mail de l’adresse de facturation de la carte</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>