unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingStreet__c</fullName>
    <inlineHelpText>Adresse de rue 1 de l’adresse de facturation de la carte</inlineHelpText>
    <label>Street Address 1</label>
    <type>TextArea</type>
</CustomField>