unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingZipPostal__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingZipPostal__c</fullName>
    <inlineHelpText>Code postal de l’adresse de facturation de la carte</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>