unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__CardBIN__c.field-meta.xml
<CustomField>
    <fullName>blng__CardBIN__c</fullName>
    <inlineHelpText>Le BIN de la carte. Les 6 premiers chiffres de la carte</inlineHelpText>
    <label>Card BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>