unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__CardLastFour__c.field-meta.xml
<CustomField>
    <fullName>blng__CardLastFour__c</fullName>
    <inlineHelpText>Ne stockera que 4 chiffres</inlineHelpText>
    <label>Card Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>