unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__NickName__c.field-meta.xml
<CustomField>
    <fullName>blng__NickName__c</fullName>
    <inlineHelpText>Surnom l’adresse de facturation de la carte</inlineHelpText>
    <label>Nick Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>