unpackaged/main/default/objects/blng__PaymentMethod__c/fields/blng__StreetAddress2__c.field-meta.xml
<CustomField>
    <fullName>blng__StreetAddress2__c</fullName>
    <inlineHelpText>Adresse de rue 2 de l’adresse de facturation de la carte</inlineHelpText>
    <label>Street Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>